Blue-green-gatewayApi/myapp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-route-http
  namespace: default
spec:
  hostnames:
  - bluegreen.vettom.online
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: myapp-v1-bluegreen
      port: 8080
      weight: 0
    - name: myapp-v2-bluegreen
      port: 8080
      weight: 100
  - backendRefs:
    - name: myapp-v3-bluegreen
      port: 8080
      weight: 1
    matches:
    - headers:
      - name: traffic
        type: Exact
        value: test
